--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "mapbox-gl": "^2.8.2",
     "popper.js": "^1.16.1",
     "sweetalert2": "^11.4.8",
     "vue": "^3.2.13",
